Added intial files for repository

--- a/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj
+++ b/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj
@@ -142,16 +142,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\..\Desktop\planet.fs" />
-    <None Include="..\..\..\..\..\Desktop\planet.vs" />
     <None Include="packages.config" />
+    <None Include="planet.fs" />
+    <None Include="planet.vs" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\Desktop\main.cpp" />
-    <ClCompile Include="..\..\..\..\..\Desktop\shader.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="shader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\Desktop\shader.h" />
+    <ClInclude Include="shader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
