--- a/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj.filters
+++ b/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj.filters
@@ -19,23 +19,23 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="..\..\..\..\..\Desktop\planet.fs">
+    <None Include="planet.vs">
       <Filter>Shader Files</Filter>
     </None>
-    <None Include="..\..\..\..\..\Desktop\planet.vs">
+    <None Include="planet.fs">
       <Filter>Shader Files</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\Desktop\main.cpp">
+    <ClCompile Include="shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\Desktop\shader.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\Desktop\shader.h">
+    <ClInclude Include="shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
