--- a/Polymorphism Testing/Polymorphism Testing.vcxproj
+++ b/Polymorphism Testing/Polymorphism Testing.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Polyhedra.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Polyhedra.h" />
