--- a/Polymorphism Testing/Polymorphism Testing.vcxproj.filters
+++ b/Polymorphism Testing/Polymorphism Testing.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Polyhedra.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Polyhedra.h">
