OOP standards in

--- a/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj.filters
+++ b/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj.filters
@@ -33,9 +33,15 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Polyhedra.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Polyhedra.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
