--- a/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj
+++ b/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj
@@ -148,9 +148,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Polyhedra.cpp" />
     <ClCompile Include="shader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Polyhedra.h" />
     <ClInclude Include="shader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
