Buffered Vertices and Lighting

--- a/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj
+++ b/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="shader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="light.h" />
     <ClInclude Include="Polyhedra.h" />
     <ClInclude Include="shader.h" />
   </ItemGroup>
