--- a/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj.filters
+++ b/CSI4900 - Honours Project/CSI4900 - Honours Project.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Polyhedra.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
